Remove some default posts and update profile

--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://t3l3sc0p3.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: T3l3sc0p3 # change to your github username
 
-twitter:
-  username: twitter_username # change to your twitter username
+#twitter:
+#  username: twitter_username # change to your twitter username
 
 social:
   # Change to your full name.
@@ -73,7 +73,7 @@ theme_mode: # [light|dark]
 img_cdn: "https://chirpy-img.netlify.app"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/commons/avatar.jpg"
+avatar: "https://t3l3sc0p3.github.io/upload/img/profile.gif"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
