--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Kuriyama Mirai
-  # email: example@domain.com # change to your email address
+  name: Mirai Kuriyama
+  email: 96990857+T3l3sc0p3@users.noreply.github.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     # - https://twitter.com/username # change to your twitter homepage
