--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -2,7 +2,7 @@ name: "Close stale issues and PRs"
 
 on:
   schedule:
-    - cron: "0 0 * * *" # every day at 00:00 UTC
+    - cron: "0 0 1 * *" # every day at 00:00 on day-of-month 1 UTC
 
 permissions:
   issues: write
