--- a/_config.yml
+++ b/_config.yml
@@ -89,10 +89,10 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
+    repo: T3l3sc0p3/t3l3sc0p3.github.io # <gh-username>/<repo>
+    repo_id: R_kgDOKurJFQ
+    category: General
+    category_id: DIC_kwDOKurJFc4CbNCa
     mapping: # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
