--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -1,3 +1,4 @@
+
 name: "Build and Deploy"
 on:
   push:
@@ -44,7 +45,9 @@ jobs:
         with:
           ruby-version: 3   # reads from a '.ruby-version' or '.tools-version' file if 'ruby-version' is omitted
           bundler-cache: true
-
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        run: npm i
       - name: Build site
         run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
         env:
