--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Ho_Chi_Minh
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Kuriyama Mirai # the main title
+title: Mirai Kuriyama # the main title
 
 tagline: Security Researching # it will display as the sub-title
 
