--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,13 @@ timezone: Asia/Ho_Chi_Minh
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Mirai Kuriyama # the main title
+# The main title
+title: Mirai Kuriyama
 
-tagline: Security Researching # it will display as the sub-title
+# The sub-title
+tagline_1: Security Researching
+tagline_2: Penetration Tester
+tagline_3: CTF Player
 
 description: >- # used by seo meta and the atom feed
   Mirai aka T3l3sc0p3's blog
