--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     ]
   },
   "dependencies": {
-    "simple-jekyll-search": "^1.10.0"
+    "simple-jekyll-search": "^1.10.0",
+    "typed.js": "^2.1.0"
   }
 }
