[master] Update _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Mirai Kuriyama
-  email: p3nt3st.w3bbb+blog@gmail.com # change to your email address
+  email: cr4wl1ng+blog@intigriti.me # change to your email address
   links:
     # The first element serves as the copyright owner's link
     # - https://twitter.com/username # change to your twitter homepage
