--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ comments:
   giscus:
     repo: T3l3sc0p3/t3l3sc0p3.github.io # <gh-username>/<repo>
     repo_id: R_kgDOKurJFQ
-    category: General
+    category: Comment Section
     category_id: DIC_kwDOKurJFc4CbNCa
     mapping: # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
