--- a/.github/workflows/random-gifs.yml
+++ b/.github/workflows/random-gifs.yml
@@ -1,4 +1,4 @@
-name: Create Random GIFs
+name: Create Random Avatar + GIFs
 
 on:
   schedule:
@@ -15,7 +15,8 @@ jobs:
         repo_user: "T3l3sc0p3"
         repo_name: "CDN-for-personal-use"
         branch: "Kuriyama-Mirai"
-        directory: "gifs"
+        gifs_dir: "gifs"
+        avatar_dir: "avatar"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,11 +30,16 @@ jobs:
             python -m pip install --upgrade pip
             pip install requests pyyaml
 
-      - name: Create random gifs
+      - name: Create random avatar + gifs
         run: |
             python ".github/script/random_gif.py" "README.md" "div"
-            git config --local user.name "github-actions[bot]"
-            git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-            git add README.md
-            git commit -m "Create random GIFs"
-            git push
+            python ".github/script/random_avatar.py" "_config.yml"
+            if [[ $(git status --porcelain) ]]; then
+                git config --local user.name "github-actions[bot]"
+                git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+                git add -A
+                git commit -m "Create random Avatar + GIFs"
+                git push
+            else
+                echo "No changes detected"
+            fi
