--- a/.github/workflows/random-gifs.yml
+++ b/.github/workflows/random-gifs.yml
@@ -2,8 +2,9 @@ name: Create Random Avatar + GIFs
 
 on:
   schedule:
-    - cron: "0 0 1 * *"
-
+    - cron: "0 3 1 * *"
+    - cron: "0 3 15 */2 *"
+    - cron: "0 0 31 3 *"
 permissions:
     contents: write
 
