--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,13 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone: Asia/Ho_Chi_Minh
+timezone: Asia/Tokyo
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
 # The main title
-title: Mirai Kuriyama
+title: Henry Scott
 
 # The sub-title
 tagline_1: Security Researching
@@ -23,7 +23,7 @@ tagline_2: Penetration Tester
 tagline_3: CTF Player
 
 description: >- # used by seo meta and the atom feed
-  Mirai aka T3l3sc0p3's blog
+  Scott aka T3l3sc0p3's blog
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -38,7 +38,7 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Mirai Kuriyama
+  name: Henry Scott
   email: cr4wl1ng+blog@intigriti.me # change to your email address
   links:
     # The first element serves as the copyright owner's link
@@ -48,7 +48,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: # fill in to your verification string
+google_site_verification: nbtQe2nkhISscOkliBCd58j79D40SjFIlqb5LeXrQgs
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
@@ -77,7 +77,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "https://raw.githubusercontent.com/T3l3sc0p3/CDN-for-personal-use/Kuriyama-Mirai/avatar/mirai4.png"
+avatar: "https://avatars.githubusercontent.com/u/96990857?v=4"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
@@ -100,7 +100,7 @@ comments:
     mapping: # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    reactions_enabled: 1 # optional, default to the value of `1`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
@@ -117,6 +117,9 @@ paginate: 10
 
 # The base URL of your site
 baseurl: ""
+
+cursor:
+  enable: true
 
 # ------------ The following options are not recommended to be modified ------------------
 
