--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,12 +6,6 @@
 #   url: {homepage_of_author}
 # -------------------------------------
 
-cotes:
-  name: Cotes Chung
-  twitter: cotes2020
-  url: https://github.com/cotes2020/
-
-sille_bille:
-  name: Dinesh Prasanth Moluguwan Krishnamoorthy
-  twitter: dinesh_MKD
-  url: https://github.com/SilleBille/
+henry_scott:
+  name: Henry Scott
+  url: https://github.com/t3l3sc0p3/
